--- a/Board00/WebContent/index.html
+++ b/Board00/WebContent/index.html
@@ -1,12 +1,207 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="EUC-KR">
-<title>자바 학습 게시판</title>
-</head>
-<body>
-	<h1>자바 학습 게시판</h1>
-	<hr>
-	<h3>자바 학습 자료를 올리는 게시판을 구현할 계획입니다.</h3>
-</body>
+	<head>
+		<meta charset="EUC-KR">
+		<title>이젠 AWS 풀스택 개발자 양성과정 학습 게시판</title>
+		<!-- CSS only -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+		<style>
+			body {
+				background-color: gray;
+			}
+			.footer_area {
+				height:2rem;
+				text-align:right;
+				vertical-align: bottom;
+			}
+			.main {
+				width:900px;
+				margin:auto;
+			}
+			th {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<table class="main table table-bordered">
+			<tr>
+				<td colspan="2" style="background-color:white;">
+					<header>
+						<table style="width:100%;">
+							<tr>
+								<td>
+									<a href="index.html">
+									<span style="font-size: 1.5rem;font-weight:bold;">이젠 AWS 풀스택 개발자 양성과정 학습 게시판</span></a>
+								</td>
+								<td style="text-align:right;">
+									<a href="join.html" class="btn btn-primary btn-sm">회원가입</a>&nbsp;
+									<a href="login.html" class="btn btn-success btn-sm">로그인</a>&nbsp;
+								</td>
+							</tr>
+						</table>
+					</header>
+				</td>
+			</tr>
+			<tr>
+				<td width="200px" valign="top" style="background-color:white;">
+					<nav>
+						<div class="d-grid gap-2 col-10 mx-auto">
+							<a href="index.html?type=JV" class="btn btn-dark">자바학습게시판</a>
+							<a href="index.html?type=H5" class="btn btn-light">HTML학습게시판</a>
+							<a href="index.html?type=C3" class="btn btn-light">CSS학습게시판</a>
+							<a href="index.html?type=JS" class="btn btn-light">JS학습게시판</a>
+						</div>
+					</nav>
+				</td>
+				<td style="background-color:white;">
+					<section>
+						<header>
+							<table style="width:100%">
+								<tr>
+									<td>
+										<span style="font-size:1.2rem;font-weight:bold;">자바 학습 게시판</span>
+									</td>
+								</tr>
+								<tr>
+									<td style="text-align:right;">
+										<a href="write.html" class="btn btn-warning btn-sm">글쓰기</a>
+									</td>
+								</tr>
+							</table>
+						</header>
+						<section>
+							<table class="table table-striped">
+								<thead class="thead-dark">
+									<tr>
+										<th>번호</th>
+										<th>제목</th>
+										<th>작성일</th>
+										<th>작성자</th>
+										<th>조회수</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td style="text-align:right">12</td>
+										<td><a href="view.html">자바 학습 자료</a>
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">11</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">10</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">9</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">8</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">7</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">6</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">5</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">4</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+									<tr>
+										<td style="text-align:right">3</td>
+										<td>자바 학습 자료
+										<span style="color:orangered;">(12)</span>
+										</td>
+										<td style="text-align:center">2023. 06. 30</td>
+										<td style="text-align:center">홍길동</td>
+										<td style="text-align:right">10</td>
+									</tr>
+								</tbody>
+							</table>
+						</section>
+						<footer>
+							<ul class="pagination justify-content-center">
+								<li class="page-item">
+									<a class="page-link" href="#" aria-label="Previous">
+										<span aria-hidden="true">&laquo;</span>
+									</a>
+								</li>
+								<li class="page-item"><a class="page-link" href="#">1</a></li>
+								<li class="page-item"><a class="page-link" href="#">2</a></li>
+								<li class="page-item"><a class="page-link" href="#">3</a></li>
+								<li class="page-item">
+									<a class="page-link" href="#" aria-label="Next">
+										<span aria-hidden="true">&raquo;</span>
+									</a>
+								</li>
+							</ul>
+						</footer>
+					</section>
+				</td>
+			</tr>
+			<tr>
+				<td class="footer_area" colspan="2" style="background-color:white;">
+					<footer>
+					Copyright by EZEN IT All right reserved.
+					</footer>
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
