웹 프로토타입 제작중

--- a/Board00/WebContent/T/modify_T.html
+++ b/Board00/WebContent/T/modify_T.html
@@ -12,24 +12,6 @@
 			.footer	{ height : 3rem; text-align : right; vertical-align : bottom; }
 			ul		{ margin:0; }
 		</style>
-		<script>
-			window.onload = function() {
-				let num = 32;
-				let list = document.querySelector(".list");
-				for( let i = 0; i < 10; i++ )
-				{
-					let item = document.createElement("tr");
-					item.innerHTML = `<td style="text-align:right">${num-i}</td>
-					<td><a href="view.html">자바 학습 자료</a>
-					<span style="color:orangered;">(12)</span>
-					</td>
-					<td style="text-align:center">2023. 06. 30</td>
-					<td style="text-align:center">홍길동</td>
-					<td style="text-align:right">10</td>`;
-					list.appendChild(item);
-				}
-			}
-		</script>
 	</head>
 	<body>
 		<!-- header  영역 시작 --------------------------------------------------------------------------------- -->
@@ -64,40 +46,59 @@
 					<section>
 		<!-- section 내부 header 영역 시작 --------------------------------------------------------------------- -->
 						<header>
-							<div style="font-size:1.2rem;font-weight:bold;">자바 학습 게시판</div>
-							<div style="width:100%; text-align:right;">
-								<a href="write.html" class="btn btn-warning btn-sm">글쓰기</a>
-							</div>
+							<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 글 쓰기 ※</div>
 						</header>
 		<!-- section 내부 header 영역 종료 --------------------------------------------------------------------- -->
 		<!-- section 내부 section 영역 시작 -------------------------------------------------------------------- -->
+						<form action="joinOk.html" method="post" id="join">
 						<section>
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th>번호</th>
-										<th>제목</th>
-										<th>작성일</th>
-										<th>작성자</th>
-										<th>조회수</th>
-									</tr>
-								</thead>
-								<tbody class="list">
-								<!-- 게시물 목록 자리 -->
-								</tbody>
+							<table class="table table-bordered">
+								<tr>
+									<td style="width: 120px;">
+										제목
+									</td>
+									<td>
+										<input type="text" name="title" value="자바 학습 자료 입니다.">
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										게시판 구분
+									</td>
+									<td>
+										<label>자바 학습 게시판 <input type="radio" name="boardType" value="JV" checked></label><br>
+										<label>HTML학습게시판 <input type="radio" name="boardType" value="H5"></label><br>
+										<label>CSS학습게시판 <input type="radio" name="boardType" value="C3"></label><br>
+										<label>JS학습게시판 <input type="radio" name="boardType"  value="JS"></label>
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										내용
+									</td>
+									<td>
+										<textarea name="contents" rows="5" cols="60">첨부 파일을 확인하세요</textarea>
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										첨부파일
+									</td>
+									<td>
+										<input type="file" name="attach">
+									</td>
+								</tr>
 							</table>
 						</section>
 		<!-- section 내부 section 영역 종료 -------------------------------------------------------------------- -->
 		<!-- section 내부 footer 영역 시작 --------------------------------------------------------------------- -->
 						<footer>
-							<ul class="pagination justify-content-center">
-								<li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-								<li class="page-item"><a class="page-link" href="#">1</a></li>
-								<li class="page-item"><a class="page-link" href="#">2</a></li>
-								<li class="page-item"><a class="page-link" href="#">3</a></li>
-								<li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
-							</ul>
+							<div style="text-align:center;">
+								<input type="submit" value="글쓰기 완료">
+								<input type="reset" value="취소">
+							</div>
 						</footer>
+						</form>
 		<!-- section 내부 footer 영역 종료 --------------------------------------------------------------------- -->
 					</section>
 		<!-- section 영역 종료 --------------------------------------------------------------------------------- -->
