--- a/Board00/WebContent/T/join_T2.html
+++ b/Board00/WebContent/T/join_T2.html
@@ -12,24 +12,6 @@
 			.footer	{ height : 3rem; text-align : right; vertical-align : bottom; }
 			ul		{ margin:0; }
 		</style>
-		<script>
-			window.onload = function() {
-				let num = 32;
-				let list = document.querySelector(".list");
-				for( let i = 0; i < 10; i++ )
-				{
-					let item = document.createElement("tr");
-					item.innerHTML = `<td style="text-align:right">${num-i}</td>
-					<td><a href="view.html">자바 학습 자료</a>
-					<span style="color:orangered;">(12)</span>
-					</td>
-					<td style="text-align:center">2023. 06. 30</td>
-					<td style="text-align:center">홍길동</td>
-					<td style="text-align:right">10</td>`;
-					list.appendChild(item);
-				}
-			}
-		</script>
 	</head>
 	<body>
 		<!-- header  영역 시작 --------------------------------------------------------------------------------- -->
@@ -64,40 +46,95 @@
 					<section>
 		<!-- section 내부 header 영역 시작 --------------------------------------------------------------------- -->
 						<header>
-							<div style="font-size:1.2rem;font-weight:bold;">자바 학습 게시판</div>
-							<div style="width:100%; text-align:right;">
-								<a href="write.html" class="btn btn-warning btn-sm">글쓰기</a>
-							</div>
+							<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 회원 가입 ※</div>
 						</header>
 		<!-- section 내부 header 영역 종료 --------------------------------------------------------------------- -->
 		<!-- section 내부 section 영역 시작 -------------------------------------------------------------------- -->
+						<form action="joinOk.html" method="get" id="join">
 						<section>
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th>번호</th>
-										<th>제목</th>
-										<th>작성일</th>
-										<th>작성자</th>
-										<th>조회수</th>
-									</tr>
-								</thead>
-								<tbody class="list">
-								<!-- 게시물 목록 자리 -->
-								</tbody>
+							<table class="table table-bordered">
+								<tr>
+									<td style="width: 120px;">
+										ID
+									</td>
+									<td>
+										<input type="text" name="userID" id="userID">
+									</td>
+								</tr>
+								<tr>
+									<td>
+										비밀번호
+									</td>
+									<td>
+										<input type="password" name="userPW" id="userPW">
+									</td>
+								</tr>
+								<tr>
+									<td>
+										비밀번호 확인
+									</td>
+									<td>
+										<input type="password" id="pwc">
+									</td>
+								</tr>
+								<tr>
+									<td>
+										이름
+									</td>
+									<td>
+										<input type="text" name="userName" id="userName">
+									</td>
+								</tr>
+								<tr>
+									<td>
+										성별
+									</td>
+									<td>
+										<label>남성 
+										<input type="radio" name="gender" value="M">
+										</label>
+										<label>여성 
+										<input type="radio" name="gender" value="F">
+										</label>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										취미
+									</td>
+									<td>
+										<select name="hobby">
+											<option value="1">영화</option>
+											<option value="2">여행</option>
+											<option value="3">음악</option>
+											<option value="4">독서</option>
+											<option value="5">게임</option>
+										</select>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										관심분야
+									</td>
+									<td>
+										<label>C++ <input	type="checkbox" name="favSkill" value="1"></label>
+										<label>JAVA <input	type="checkbox" name="favSkill" value="2"></label>
+										<label>HTML <input	type="checkbox" name="favSkill" value="3"></label>
+										<label>JS <input	type="checkbox" name="favSkill" value="4"></label>
+										<label>DB <input	type="checkbox" name="favSkill" value="5"></label>
+									</td>
+								</tr>
 							</table>
 						</section>
 		<!-- section 내부 section 영역 종료 -------------------------------------------------------------------- -->
 		<!-- section 내부 footer 영역 시작 --------------------------------------------------------------------- -->
 						<footer>
-							<ul class="pagination justify-content-center">
-								<li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-								<li class="page-item"><a class="page-link" href="#">1</a></li>
-								<li class="page-item"><a class="page-link" href="#">2</a></li>
-								<li class="page-item"><a class="page-link" href="#">3</a></li>
-								<li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
-							</ul>
+							<div style="text-align:center;">
+								<input type="submit" value="가입하기">
+								<input type="reset" value="취소">
+							</div>
 						</footer>
+						</form>
 		<!-- section 내부 footer 영역 종료 --------------------------------------------------------------------- -->
 					</section>
 		<!-- section 영역 종료 --------------------------------------------------------------------------------- -->
