--- a/Board00/WebContent/modify.html
+++ b/Board00/WebContent/modify.html
@@ -12,8 +12,6 @@
 			.footer	{ height : 3rem; text-align : right; vertical-align : bottom; }
 			ul		{ margin:0; }
 		</style>
-		<script>
-		</script>
 	</head>
 	<body>
 		<!-- header  영역 시작 --------------------------------------------------------------------------------- -->
@@ -45,60 +43,64 @@
 				</td>
 				<td style="background-color:white;">
 		<!-- section 영역 시작 --------------------------------------------------------------------------------- -->
-				<form action="writeOk.html" method="post">
 					<section>
 		<!-- section 내부 header 영역 시작 --------------------------------------------------------------------- -->
 						<header>
-							<div style="font-size:1.2rem;font-weight:bold;">글수정</div>
-							<br>
+							<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 글 수정 ※</div>
 						</header>
 		<!-- section 내부 header 영역 종료 --------------------------------------------------------------------- -->
 		<!-- section 내부 section 영역 시작 -------------------------------------------------------------------- -->
+						<form action="modifyOk.html" method="post" id="join">
 						<section>
-						<table>
-							<tr>
-								<td style="width:6rem" name="title">제목</td>
-								<td><input type="text"></td>
-							</tr>
-							<tr>
-								<td>게시판 구분</td>
-								<td>
-									<label>자바 학습 게시판</label><input type="radio" name="boardType" value="jv" checked></label><br>
-									<label>HTML 학습 게시판<input type="radio" name="boardType" value="h5"></label><br>
-									<label>CSS 학습 게시판<input type="radio" name="boardType" value="cs"></label><br>
-									<label>JS 학습 게시판<input type="radio" name="boardType" value="js"></label><br>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									내용
-								</td>
-								<td>
-									<textarea name="contents" rows="5" cols="60" placeholder="첨부 파일을 확인하세요"></textarea>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									첨부파일
-								</td>
-								<td>
-									<input type="file" name="attach"> </textarea>
-								</td>
-							</tr>
-						</table>
+							<table class="table table-bordered">
+								<tr>
+									<td style="width: 120px;">
+										제목
+									</td>
+									<td>
+										<input type="text" name="title" value="자바 학습 자료 입니다.">
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										게시판 구분
+									</td>
+									<td>
+										<label>자바 학습 게시판 <input type="radio" name="boardType" value="JV" checked></label><br>
+										<label>HTML학습게시판 <input type="radio" name="boardType" value="H5"></label><br>
+										<label>CSS학습게시판 <input type="radio" name="boardType" value="C3"></label><br>
+										<label>JS학습게시판 <input type="radio" name="boardType"  value="JS"></label>
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										내용
+									</td>
+									<td>
+										<textarea name="contents" rows="5" cols="60">첨부 파일을 확인하세요</textarea>
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										첨부파일
+									</td>
+									<td>
+										<input type="file" name="attach">
+									</td>
+								</tr>
+							</table>
 						</section>
 		<!-- section 내부 section 영역 종료 -------------------------------------------------------------------- -->
 		<!-- section 내부 footer 영역 시작 --------------------------------------------------------------------- -->
 						<footer>
-							<br>
-							<div id="divBtn" align=center>
-								<button type=submit>가입하기</button>
-								<button type=button onclick="location.href='index.html';">취소</button>
+							<div style="text-align:center;">
+								<input type="submit" value="글쓰기 완료">
+								<input type="reset" value="취소">
 							</div>
 						</footer>
+						</form>
 		<!-- section 내부 footer 영역 종료 --------------------------------------------------------------------- -->
 					</section>
-				</form>
 		<!-- section 영역 종료 --------------------------------------------------------------------------------- -->
 				</td>
 			</tr>
