--- a/Board00/WebContent/view.html
+++ b/Board00/WebContent/view.html
@@ -46,91 +46,66 @@
 					<section>
 		<!-- section 내부 header 영역 시작 --------------------------------------------------------------------- -->
 						<header>
-							<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 회원 가입 ※</div>
+							<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 글 보기 ※</div>
 						</header>
 		<!-- section 내부 header 영역 종료 --------------------------------------------------------------------- -->
 		<!-- section 내부 section 영역 시작 -------------------------------------------------------------------- -->
-						<form action="joinOk.html" method="get" id="join">
 						<section>
 							<table class="table table-bordered">
 								<tr>
 									<td style="width: 120px;">
-										ID
+										제목
 									</td>
 									<td>
-										<input type="text" name="userID" id="userID"> &nbsp;<a href="idcheck.html" class="btn btn-warning  btn-sm">중복체크</a>
+										자바 학습 자료 입니다.
 									</td>
 								</tr>
 								<tr>
-									<td>
-										비밀번호
+									<td style="width: 120px;">
+										게시판 구분
 									</td>
 									<td>
-										<input type="password" name="userPW" id="userPW">
-									</td>
-								</tr>
-								<tr>
-									<td>
-										비밀번호 확인
-									</td>
-									<td>
-										<input type="password" id="pwc">
+										자바 학습 게시판
 									</td>
 								</tr>
 								<tr>
-									<td>
-										이름
+									<td style="width: 120px;">
+										작성자
 									</td>
 									<td>
-										<input type="text" name="userName" id="userName">
-									</td>
-								</tr>
-								<tr>
-									<td>
-										성별
-									</td>
-									<td>
-										<label>남성 
-										<input type="radio" name="gender" value="M">
-										</label>
-										<label>여성 
-										<input type="radio" name="gender" value="F">
-										</label>
+										홍길동
 									</td>
 								</tr>
 								<tr>
-									<td>
-										취미
+									<td style="width: 120px;">
+										작성일
 									</td>
 									<td>
-										<select name="hobby">
-											<option value="1">영화</option>
-											<option value="2">여행</option>
-											<option value="3">음악</option>
-											<option value="4">독서</option>
-											<option value="5">게임</option>
-										</select>
+										2023. 06. 30
 									</td>
 								</tr>
 								<tr>
-									<td>
-										관심분야
+									<td style="width: 120px;">
+										조회수
 									</td>
 									<td>
-										<label>C++ <input	type="checkbox" name="favSkill" value="1"></label>
-										<label>JAVA <input	type="checkbox" name="favSkill" value="2"></label>
-										<label>HTML <input	type="checkbox" name="favSkill" value="3"></label>
-										<label>JS <input	type="checkbox" name="favSkill" value="4"></label>
-										<label>DB <input	type="checkbox" name="favSkill" value="5"></label>
+										10회
 									</td>
 								</tr>
 								<tr>
-									<td>
-										자동가입방지
+									<td style="width: 120px;">
+										내용
 									</td>
-									<td style="text-align:center;">
-										<img src="Captcha.jpg"><br>
-										<input type="text">
+									<td>
+										첨부 파일을 확인하세요
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										첨부파일
+									</td>
+									<td>
+										java_1강.pdf
 									</td>
 								</tr>
 							</table>
@@ -139,12 +114,113 @@
 		<!-- section 내부 footer 영역 시작 --------------------------------------------------------------------- -->
 						<footer>
 							<div style="text-align:center;">
-								<input type="submit" value="가입하기">
-								<input type="reset" value="취소">
+<!-- 								<input type="button" value="글목록">
+								<input type="button" value="글수정">
+								<input type="button" value="글삭제">
+ -->
+								<a href="index.html" class="btn btn-primary btn-sm">글목록</a>
+								<a href="modify.html" class="btn btn-success btn-sm">글수정</a>
+								<a href="delete.html" class="btn btn-danger btn-sm">글삭제</a>
 							</div>
 						</footer>
-						</form>
+						<br>
 		<!-- section 내부 footer 영역 종료 --------------------------------------------------------------------- -->
+		<!-- section 내부 section_reply 영역 시작 -------------------------------------------------------------------- -->
+						<form action="replyOk.html" method="post" id="reply">
+						<section>
+							<table class="table table-bordered">
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										<input type="text" size="35rem"><input type="button" value="작성완료">
+									</td>
+									<td>
+										작성일
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다.
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다.
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다.
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다.
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다.
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다.
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+								<tr>
+									<td style="width: 120px;">
+										홍길동
+									</td>
+									<td>
+										댓글입니다. <span style="position:relative; right:10px;"><input type="button" value="삭제"></span>
+									</td>
+									<td>
+										2023. 07. 04
+									</td>
+								</tr>
+							</table>
+						</section>
+						</form>
+		<!-- section 내부 section 영역 종료 -------------------------------------------------------------------- -->
 					</section>
 		<!-- section 영역 종료 --------------------------------------------------------------------------------- -->
 				</td>
