--- a/Board00/WebContent/join_t.html
+++ b/Board00/WebContent/join_t.html
@@ -44,106 +44,105 @@
 				<td style="background-color:white;">
 		<!-- section 영역 시작 --------------------------------------------------------------------------------- -->
 					<section>
+						<table class="table table-bordered">
 		<!-- section 내부 header 영역 시작 --------------------------------------------------------------------- -->
-						<header>
-							<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 회원 가입 ※</div>
-						</header>
+							<tr>
+								<td colspan="2">
+									<header>
+										<div style="font-size:1.2rem;font-weight:bold; color: red;">※ 회원 가입 ※</div>
+									</header>
+								</td>
+							</tr>
 		<!-- section 내부 header 영역 종료 --------------------------------------------------------------------- -->
 		<!-- section 내부 section 영역 시작 -------------------------------------------------------------------- -->
-						<form action="joinOk.html" method="get" id="join">
-						<section>
-							<table class="table table-bordered">
-								<tr>
-									<td style="width: 120px;">
-										ID
-									</td>
-									<td>
-										<input type="text" name="userID" id="userID"> &nbsp;<a href="idcheck.html" class="btn btn-warning  btn-sm">중복체크</a>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										비밀번호
-									</td>
-									<td>
-										<input type="password" name="userPW" id="userPW">
-									</td>
-								</tr>
-								<tr>
-									<td>
-										비밀번호 확인
-									</td>
-									<td>
-										<input type="password" id="pwc">
-									</td>
-								</tr>
-								<tr>
-									<td>
-										이름
-									</td>
-									<td>
-										<input type="text" name="userName" id="userName">
-									</td>
-								</tr>
-								<tr>
-									<td>
-										성별
-									</td>
-									<td>
-										<label>남성 
-										<input type="radio" name="gender" value="M">
-										</label>
-										<label>여성 
-										<input type="radio" name="gender" value="F">
-										</label>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										취미
-									</td>
-									<td>
-										<select name="hobby">
-											<option value="1">영화</option>
-											<option value="2">여행</option>
-											<option value="3">음악</option>
-											<option value="4">독서</option>
-											<option value="5">게임</option>
-										</select>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										관심분야
-									</td>
-									<td>
-										<label>C++ <input	type="checkbox" name="favSkill" value="1"></label>
-										<label>JAVA <input	type="checkbox" name="favSkill" value="2"></label>
-										<label>HTML <input	type="checkbox" name="favSkill" value="3"></label>
-										<label>JS <input	type="checkbox" name="favSkill" value="4"></label>
-										<label>DB <input	type="checkbox" name="favSkill" value="5"></label>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										자동가입방지
-									</td>
-									<td style="text-align:center;">
-										<img src="Captcha.jpg"><br>
-										<input type="text">
-									</td>
-								</tr>
-							</table>
-						</section>
+							<section>
+							<form action="joinOk.html" method="get">
+							<tr>
+								<td style="width: 120px;">
+									ID
+								</td>
+								<td>
+									<input type="text" >
+								</td>
+							</tr>
+							<tr>
+								<td>
+									비밀번호
+								</td>
+								<td>
+									<input type="password" >
+								</td>
+							</tr>
+							<tr>
+								<td>
+									비밀번호 확인
+								</td>
+								<td>
+									<input type="password" >
+								</td>
+							</tr>
+							<tr>
+								<td>
+									이름
+								</td>
+								<td>
+									<input type="text" >
+								</td>
+							</tr>
+							<tr>
+								<td>
+									성별
+								</td>
+								<td>
+									<label>남성 
+									<input type="radio" name="gender">
+									</label>
+									<label>여성 
+									<input type="radio" name="gender">
+									</label>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									취미
+								</td>
+								<td>
+									<select name="hobby">
+										<option>영화</option>
+										<option>여행</option>
+										<option>음악</option>
+										<option>독서</option>
+										<option>게임</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									관심분야
+								</td>
+								<td>
+									<label>C++ <input type="checkbox" name="favSkill"></label>
+									<label>JAVA <input type="checkbox" name="favSkill"></label>
+									<label>HTML <input type="checkbox" name="favSkill"></label>
+									<label>JS <input type="checkbox" name="favSkill"></label>
+									<label>DB <input type="checkbox" name="favSkill"></label>
+								</td>
+							</tr>
+							</section>
 		<!-- section 내부 section 영역 종료 -------------------------------------------------------------------- -->
 		<!-- section 내부 footer 영역 시작 --------------------------------------------------------------------- -->
-						<footer>
-							<div style="text-align:center;">
-								<input type="submit" value="가입하기">
-								<input type="reset" value="취소">
-							</div>
-						</footer>
-						</form>
+							<tr>
+								<td colspan="2">
+									<footer>
+										<div style="text-align:center;">
+											<input type="submit" value="가입하기">
+											<input type="reset" value="취소">
+										</div>
+									</footer>
+								</td>
+							</tr>
+							</form>
+						</table>
 		<!-- section 내부 footer 영역 종료 --------------------------------------------------------------------- -->
 					</section>
 		<!-- section 영역 종료 --------------------------------------------------------------------------------- -->
