--- a/Board01/WebContent/view.html
+++ b/Board01/WebContent/view.html
@@ -178,40 +178,12 @@
 										È«±æµ¿
 									</td>
 									<td>
-										´ñ±ÛÀÔ´Ï´Ù.
-									</td>
-									<td>
-										2023. 07. 04
-									</td>
-								</tr>
-								<tr>
-									<td style="width: 120px;">
-										È«±æµ¿
-									</td>
-									<td>
-										´ñ±ÛÀÔ´Ï´Ù.
-									</td>
-									<td>
-										2023. 07. 04
-									</td>
-								</tr>
-								<tr>
-									<td style="width: 120px;">
-										È«±æµ¿
-									</td>
-									<td>
-										´ñ±ÛÀÔ´Ï´Ù.
-									</td>
-									<td>
-										2023. 07. 04
-									</td>
-								</tr>
-								<tr>
-									<td style="width: 120px;">
-										È«±æµ¿
-									</td>
-									<td>
-										´ñ±ÛÀÔ´Ï´Ù. <span style="position:relative; right:10px;"><input type="button" value="»èÁ¦"></span>
+										<div style="display:flex; justify-content: space-between;">
+											<span>
+												´ñ±ÛÀÔ´Ï´Ù.
+											</span>
+											<a href="deleteReply.html" class="btn btn-danger btn-sm">´ñ±Û»èÁ¦</a>
+										</div>
 									</td>
 									<td>
 										2023. 07. 04
