--- a/Board00/WebContent/view.html
+++ b/Board00/WebContent/view.html
@@ -5,13 +5,7 @@
 		<title>ÀÌÁ¨ AWS Ç®½ºÅÃ °³¹ßÀÚ ¾ç¼º°úÁ¤ ÇÐ½À °Ô½ÃÆÇ</title>
 		<!-- CSS only -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-		<style>
-			body	{ background-color: gray; }
-			.main	{ width : 900px; margin : auto; }
-			th		{ text-align : center; }
-			.footer	{ height : 3rem; text-align : right; vertical-align : bottom; }
-			ul		{ margin:0; }
-		</style>
+		<link href="board.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- header  ¿µ¿ª ½ÃÀÛ --------------------------------------------------------------------------------- -->
@@ -178,40 +172,12 @@
 										È«±æµ¿
 									</td>
 									<td>
-										´ñ±ÛÀÔ´Ï´Ù.
-									</td>
-									<td>
-										2023. 07. 04
-									</td>
-								</tr>
-								<tr>
-									<td style="width: 120px;">
-										È«±æµ¿
-									</td>
-									<td>
-										´ñ±ÛÀÔ´Ï´Ù.
-									</td>
-									<td>
-										2023. 07. 04
-									</td>
-								</tr>
-								<tr>
-									<td style="width: 120px;">
-										È«±æµ¿
-									</td>
-									<td>
-										´ñ±ÛÀÔ´Ï´Ù.
-									</td>
-									<td>
-										2023. 07. 04
-									</td>
-								</tr>
-								<tr>
-									<td style="width: 120px;">
-										È«±æµ¿
-									</td>
-									<td>
-										´ñ±ÛÀÔ´Ï´Ù. <span style="position:relative; right:10px;"><input type="button" value="»èÁ¦"></span>
+										<div style="display:flex; justify-content: space-between;">
+											<span>
+												´ñ±ÛÀÔ´Ï´Ù.
+											</span>
+											<a href="deleteReply.html" class="btn btn-danger btn-sm">´ñ±Û»èÁ¦</a>
+										</div>
 									</td>
 									<td>
 										2023. 07. 04
